--- a/ETSMobile/Base.lproj/Main_iPhone.storyboard
+++ b/ETSMobile/Base.lproj/Main_iPhone.storyboard
@@ -892,14 +892,31 @@
                             <rect key="frame" x="0.0" y="0.0" width="320" height="36"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                             <subviews>
-                                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Hello" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JLK-b1-BvS">
+                                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Hello" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JLK-b1-BvS">
                                     <rect key="frame" x="20" y="7" width="280" height="21"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <constraints>
+                                        <constraint firstAttribute="height" constant="21" id="aSP-O9-OLt"/>
+                                    </constraints>
                                     <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="18"/>
                                     <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                     <nil key="highlightedColor"/>
                                 </label>
+                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8GR-vd-eSZ">
+                                    <rect key="frame" x="0.0" y="0.0" width="320" height="1"/>
+                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                </view>
                             </subviews>
+                            <constraints>
+                                <constraint firstAttribute="bottom" secondItem="JLK-b1-BvS" secondAttribute="bottom" constant="8" id="0Pc-eo-fff"/>
+                                <constraint firstAttribute="trailing" secondItem="JLK-b1-BvS" secondAttribute="trailing" constant="20" symbolic="YES" id="QNF-hy-8Xr"/>
+                                <constraint firstItem="JLK-b1-BvS" firstAttribute="leading" secondItem="hZD-SF-G7r" secondAttribute="leading" constant="20" symbolic="YES" id="VDi-e5-b5O"/>
+                                <constraint firstItem="JLK-b1-BvS" firstAttribute="top" secondItem="8GR-vd-eSZ" secondAttribute="bottom" constant="6" id="YY9-s2-INX"/>
+                                <constraint firstItem="8GR-vd-eSZ" firstAttribute="centerX" secondItem="JLK-b1-BvS" secondAttribute="centerX" id="Znf-hz-GQW"/>
+                                <constraint firstItem="8GR-vd-eSZ" firstAttribute="leading" secondItem="hZD-SF-G7r" secondAttribute="leading" id="h7s-KM-FMv"/>
+                                <constraint firstItem="8GR-vd-eSZ" firstAttribute="top" secondItem="hZD-SF-G7r" secondAttribute="top" id="uMJ-N5-tvk"/>
+                            </constraints>
                             <connections>
                                 <outlet property="sessionLabel" destination="JLK-b1-BvS" id="UZZ-h9-8Lq"/>
                             </connections>
@@ -933,43 +950,45 @@
                                         <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Lorem ipsum dolor sit amet, consectetur adipiscing elit." lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PES-K9-Wfo">
                                             <rect key="frame" x="5" y="5" width="282" height="21"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                            <constraints>
-                                                <constraint firstAttribute="height" constant="21" id="z7Q-aI-9dh"/>
-                                            </constraints>
                                             <fontDescription key="fontDescription" style="UICTFontTextStyleSubhead"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="160" translatesAutoresizingMaskIntoConstraints="NO" id="Fnz-vW-8yd">
+                                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="160" translatesAutoresizingMaskIntoConstraints="NO" id="Fnz-vW-8yd">
                                             <rect key="frame" x="127" y="27" width="160" height="87"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                            <string key="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras rhoncus scelerisque accumsan. Integer quis aliquet quam, id facilisis urna. Mauris sodales, purus quis congue tempor, nulla magna rhoncus massa, sit amet rhoncus ante lorem hendrerit tortor. Ut libero lorem, lacinia vitae nunc quis, iaculis imperdiet mauris. Curabitur lacinia, lorem sit amet malesuada auctor, eros lorem venenatis nibh, a imperdiet lorem diam ut lorem. Pellentesque luctus mauris ut justo mattis eleifend. Cras placerat pretium felis, id sagittis dui. Pellentesque eget nunc nec dui bibendum fringilla.</string>
-                                            <fontDescription key="fontDescription" style="UICTFontTextStyleCaption1"/>
+                                            <attributedString key="attributedText">
+                                                <fragment>
+                                                    <mutableString key="content">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras rhoncus scelerisque accumsan. Integer quis aliquet quam, id facilisis urna. Mauris sodales, purus quis congue tempor, nulla magna rhoncus massa, sit amet rhoncus ante lorem hendrerit tortor. Ut libero lorem, lacinia vitae nunc quis, iaculis imperdiet mauris. Curabitur lacinia, lorem sit amet malesuada auctor, eros lorem venenatis nibh, a imperdiet lorem diam ut lorem. Pellentesque luctus mauris ut justo mattis eleifend. Cras placerat pretium felis, id sagittis dui. Pellentesque eget nunc nec dui bibendum fringilla.</mutableString>
+                                                    <attributes>
+                                                        <color key="NSColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                                                        <font key="NSFont" size="10" name="HelveticaNeue"/>
+                                                        <paragraphStyle key="NSParagraphStyle" alignment="justified" lineBreakMode="wordWrapping" baseWritingDirection="natural"/>
+                                                    </attributes>
+                                                </fragment>
+                                            </attributedString>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="yFE-SG-Vis">
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="F6h-2v-Cri">
                                             <rect key="frame" x="5" y="27" width="114" height="87"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                            <subviews>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="F6h-2v-Cri">
-                                                    <rect key="frame" x="0.0" y="0.0" width="114" height="87"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                </imageView>
-                                            </subviews>
                                             <color key="backgroundColor" red="0.74509803919999995" green="0.0" blue="0.039215686270000001" alpha="1" colorSpace="calibratedRGB"/>
-                                        </view>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="87" id="gTf-DQ-Sku"/>
+                                                <constraint firstAttribute="width" constant="114" id="hTD-pd-11a"/>
+                                            </constraints>
+                                        </imageView>
                                     </subviews>
                                     <constraints>
-                                        <constraint firstItem="Fnz-vW-8yd" firstAttribute="top" secondItem="PES-K9-Wfo" secondAttribute="bottom" constant="1" id="Dev-6c-8NY"/>
-                                        <constraint firstItem="PES-K9-Wfo" firstAttribute="top" secondItem="Kjw-6D-AQn" secondAttribute="top" constant="5" id="DgY-yz-VGa"/>
-                                        <constraint firstItem="PES-K9-Wfo" firstAttribute="leading" secondItem="Kjw-6D-AQn" secondAttribute="leading" constant="5" id="LDl-17-ckt"/>
-                                        <constraint firstAttribute="bottom" secondItem="yFE-SG-Vis" secondAttribute="bottom" constant="11" id="URw-Wo-2kw"/>
-                                        <constraint firstAttribute="bottom" secondItem="Fnz-vW-8yd" secondAttribute="bottom" constant="11" id="YRc-zd-k98"/>
-                                        <constraint firstItem="Fnz-vW-8yd" firstAttribute="leading" secondItem="Kjw-6D-AQn" secondAttribute="leading" constant="127" id="hvB-HX-QNQ"/>
-                                        <constraint firstItem="yFE-SG-Vis" firstAttribute="leading" secondItem="Kjw-6D-AQn" secondAttribute="leading" constant="5" id="kV2-xJ-tVS"/>
-                                        <constraint firstAttribute="trailing" secondItem="Fnz-vW-8yd" secondAttribute="trailing" id="nUG-P4-zk6"/>
-                                        <constraint firstItem="Fnz-vW-8yd" firstAttribute="leading" secondItem="yFE-SG-Vis" secondAttribute="trailing" constant="8" id="t0a-CT-4X7"/>
-                                        <constraint firstItem="yFE-SG-Vis" firstAttribute="top" secondItem="PES-K9-Wfo" secondAttribute="bottom" constant="1" id="uAh-Uc-htO"/>
-                                        <constraint firstItem="PES-K9-Wfo" firstAttribute="trailing" secondItem="Fnz-vW-8yd" secondAttribute="trailing" id="zBb-jx-koO"/>
+                                        <constraint firstItem="F6h-2v-Cri" firstAttribute="top" secondItem="PES-K9-Wfo" secondAttribute="bottom" constant="1" id="Ddn-cj-ZLU"/>
+                                        <constraint firstAttribute="trailing" secondItem="PES-K9-Wfo" secondAttribute="trailing" id="ExE-Rg-NJE"/>
+                                        <constraint firstItem="Fnz-vW-8yd" firstAttribute="leading" secondItem="F6h-2v-Cri" secondAttribute="trailing" constant="8" symbolic="YES" id="HdW-LF-NMs"/>
+                                        <constraint firstItem="PES-K9-Wfo" firstAttribute="leading" secondItem="Kjw-6D-AQn" secondAttribute="leading" constant="5" id="Rqy-GI-sQ9"/>
+                                        <constraint firstAttribute="trailing" secondItem="Fnz-vW-8yd" secondAttribute="trailing" id="dUM-49-AT3"/>
+                                        <constraint firstItem="Fnz-vW-8yd" firstAttribute="top" secondItem="F6h-2v-Cri" secondAttribute="top" id="h7Z-Ey-RWb"/>
+                                        <constraint firstItem="PES-K9-Wfo" firstAttribute="top" secondItem="Kjw-6D-AQn" secondAttribute="top" constant="5" id="pmc-qT-edI"/>
+                                        <constraint firstItem="Fnz-vW-8yd" firstAttribute="bottom" secondItem="F6h-2v-Cri" secondAttribute="bottom" id="s9A-rX-KfY"/>
+                                        <constraint firstAttribute="bottom" secondItem="F6h-2v-Cri" secondAttribute="bottom" constant="11" id="tNg-pm-W9a"/>
+                                        <constraint firstItem="PES-K9-Wfo" firstAttribute="leading" secondItem="F6h-2v-Cri" secondAttribute="leading" id="v7f-bO-sXQ"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
@@ -1108,7 +1127,7 @@
             </objects>
             <point key="canvasLocation" x="-26" y="-2079"/>
         </scene>
-        <!--Profile View Controller-->
+        <!--Profile View Controller - Title-->
         <scene sceneID="63K-v4-Gko">
             <objects>
                 <tableViewController storyboardIdentifier="ProfileViewController" id="Dlf-Hn-LBA" customClass="ETSProfileViewController" sceneMemberID="viewController">
@@ -1118,7 +1137,7 @@
                         <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                         <prototypes>
                             <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="ProfileIdentifier" textLabel="1Lr-pE-hgz" detailTextLabel="TiS-0u-6iz" style="IBUITableViewCellStyleValue1" id="8NH-T3-LY8">
-                                <rect key="frame" x="0.0" y="55" width="320" height="44"/>
+                                <rect key="frame" x="0.0" y="119" width="320" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="8NH-T3-LY8" id="Def-N8-hId">
                                     <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
@@ -1147,6 +1166,14 @@
                             <outlet property="delegate" destination="Dlf-Hn-LBA" id="wIa-3d-TVD"/>
                         </connections>
                     </tableView>
+                    <navigationItem key="navigationItem" title="Title" id="5da-Kz-usl">
+                        <barButtonItem key="rightBarButtonItem" title="Déconnexion" id="6Oh-s1-ioH">
+                            <connections>
+                                <action selector="logout:" destination="Dlf-Hn-LBA" id="zrA-T0-aYr"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <refreshControl key="refreshControl" opaque="NO" multipleTouchEnabled="YES" contentMode="center" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" id="TZc-7c-Bch">
                         <autoresizingMask key="autoresizingMask"/>
                     </refreshControl>
