--- a/ETSMobile/Base.lproj/Main_iPhone.storyboard
+++ b/ETSMobile/Base.lproj/Main_iPhone.storyboard
@@ -22,6 +22,27 @@
             </objects>
             <point key="canvasLocation" x="-551" y="808"/>
         </scene>
+        <!--Calendar View Controller-->
+        <scene sceneID="Oia-Vo-EJ8">
+            <objects>
+                <collectionViewController storyboardIdentifier="CalendarViewController" autoresizesArchivedViewToFullSize="NO" id="cmt-IF-br5" customClass="ETSCalendarViewController" sceneMemberID="viewController">
+                    <collectionView key="view" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" minimumZoomScale="0.0" maximumZoomScale="0.0" dataMode="prototypes" id="bcj-vd-5FU">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <collectionViewLayout key="collectionViewLayout" id="nXu-fD-U8P" customClass="MSCollectionViewCalendarLayout"/>
+                        <cells/>
+                        <connections>
+                            <outlet property="dataSource" destination="cmt-IF-br5" id="n7q-IC-neA"/>
+                            <outlet property="delegate" destination="cmt-IF-br5" id="Op4-oG-jRd"/>
+                        </connections>
+                    </collectionView>
+                    <simulatedStatusBarMetrics key="simulatedStatusBarMetrics"/>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
+                </collectionViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="qks-3W-hOf" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-869" y="1554"/>
+        </scene>
         <!--Comment View Controller - Commentaire-->
         <scene sceneID="tlV-6T-k3a">
             <objects>
@@ -1383,34 +1404,6 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="lrm-kH-fPn" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="902" y="64"/>
-        </scene>
-        <!--Calendar View Controller-->
-        <scene sceneID="Zvg-IS-jhs">
-            <objects>
-                <tableViewController storyboardIdentifier="CalendarViewController" id="iSQ-Ts-gwx" customClass="ETSCalendarViewController" sceneMemberID="viewController">
-                    <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="SKb-kR-0ip">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <prototypes>
-                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="1sX-1E-GcY">
-                                <rect key="frame" x="0.0" y="22" width="320" height="44"/>
-                                <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="1sX-1E-GcY" id="QB2-KI-lCb">
-                                    <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
-                                    <autoresizingMask key="autoresizingMask"/>
-                                </tableViewCellContentView>
-                            </tableViewCell>
-                        </prototypes>
-                        <connections>
-                            <outlet property="dataSource" destination="iSQ-Ts-gwx" id="knC-bZ-IU4"/>
-                            <outlet property="delegate" destination="iSQ-Ts-gwx" id="2s8-Oo-oaX"/>
-                        </connections>
-                    </tableView>
-                </tableViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="qDS-SS-Uh6" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-881" y="1529"/>
         </scene>
     </scenes>
     <resources>
